Several linter code quality improvements. All front and back end tests pass.